# PredictiveParking

./: .gitignore  Dockerfile  Jenkinsfile  Pipfile  README.md  app.py  cli.py  main.tf  nginx.conf  predictor.py  pyproject.toml  report.py  requirements.txt  test.py  train.py
app/: __init__.py  app.py  auth_provider.py  availability_provider.py  availability_tracker.py  cli.py  constants.py  data_formats.py  fybr_availability_provider.py  keeper_of_the_state.py  model.py  model_provider.py  model_thingy.py  now_adjusted.py  predictor.py  requirements.txt  start.sh  test.py  train.config  train.py  train.sh  util.py  uwsgi.ini  vault_auth_provider.py  zone_info.py
app2.0/: __init__.py  predictor.py  requirements.txt  train.py
chart/: dev.yaml  prod.yaml  staging.yaml  values.yaml
meter_config/: zone_centroid_cluster_short_north.csv
models/: model_cluster0  model_cluster1  model_cluster2  model_cluster5  model_cluster7
notebooks/: 01. Evaluating the Performance of Parking Availability Models.ipynb  02. Feature Selection.ipynb  03. Possible New Model - Rolling Average Models.ipynb  04. Possible New Model - Prophet Models.ipynb  Visualizing Zone Clusters v1.ipynb
tests/: conftest.py  fake_vault.py  fake_websocket_server.py  test_app.py  test_auth_provider.py  test_availability_provider.py  test_availability_tracker.py  test_data_formats.py  test_fybr_availability_provider.py  test_fybr_availability_tracker.py  test_keeper_of_the_state.py  test_model.py  test_model_provider.py  test_now_adjusted.py  test_predictor.py  test_vault_auth_provider.py  test_zone_info.py  (+1 more)
(+117 files in other folders)
